<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TesteDamas1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="caption_play_checkers">Jogar</string>
    <string name="caption_visit_us"></string>
    <string name="caption_about_us"></string>
    <string name="caption_license">Regras do Jogo</string>
    <string name="caption_quit">Sair</string>
    <string name="caption_settings">Configurações</string>
    <string name="app_version">0.2-alpha</string>
    <string name="project_website">http://justcheckers.org/</string>
    <string name="title_activity_play">PlayActivity</string>
	<string name="template_opposing_player">Jogador 2</string>
	<string name="template_capture_amounts">x 0</string>
	<string name="template_current_player">Jogador 1</string>
</resources>
