<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   
	
	<TableLayout android:id="@+id/menu_table"
		android:layout_centerInParent="true"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:padding="5dp">
		
		<TableRow 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
			
			<Button android:id="@+id/game_button" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/caption_play_checkers" />
			<Button android:id="@+id/website_button"   
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/caption_visit_us" />
			
		</TableRow>
		<TableRow 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
			
			
			<Button android:id="@+id/about_us_button"   
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/caption_about_us" />
			<Button android:id="@+id/license_button" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/caption_license" />
			
		</TableRow>
		<TableRow 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
			
			<Button android:id="@+id/settings_button" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/caption_settings" />
			<Button android:id="@+id/quit_button" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/caption_quit"  />
			
		</TableRow>
		
	</TableLayout>
    
</RelativeLayout>
